--- a/Axiomatique/GabaritAxiomatique.tex
+++ b/Axiomatique/GabaritAxiomatique.tex
@@ -87,7 +87,7 @@
 \subsection[Sous-section]{Comment coder}
 	\lipsum[15-16]
 	%% Pour inserer un code
-	\begin{lstlisting}[language=Mathematica, caption=Example Mathematica]
+	\begin{lstlisting}[language=Mathematica, caption=Exemple Mathematica]
 	(*Pour importer le texte de la page web*)
 	text = Import["https://en.wikipedia.org/wiki/LaTeX"];
 	(*Exporte le nuage de mot sous l'extension .png*)
@@ -106,6 +106,8 @@
 	\begin{multicols}{3}
 		\lipsum[17-18]
 	\end{multicols}
+\section[Les d\'echets  FMA-VC]{Les d\'echets faibles ou Moyenne activit\'e \`a Vie Courte}
+	On parle de d\'echet FMA-VC pour les radionucl\'eides qui ont des p\'eriodes de demi-vie de moins de trente-et-un ans. Les d\'echets de tr\`es faibles activit\'es (TFA) et les FMA-VC repr\'esentent la grande majorit\'e de l'inventaire de l'ANDRA\footnotetext{\url{https://www.andra.fr/sites/default/files/2020-02/Andra-MAJ_Essentiels_2020-Web.pdf}}.
 \pagebreak
 
 {
