--- a/Canonique/document.tex
+++ b/Canonique/document.tex
@@ -1,7 +1,7 @@
 \documentclass[french, babel]{article}
 \input{pream}
-\cfoot{Algèbre Linéaire}
-\title{eee}
+\cfoot{Cours}
+\title{Title}
 \begin{document}
 \begin{titlepage}
 	\centering
